<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="false"
    tools:context=".MainPage"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2"
        android:clipToPadding="false"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:clipToPadding="false"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/mkVideo"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="150dp"
                android:elevation="50dp"
                android:layout_marginEnd="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/desc"
                        android:src="@drawable/video" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_light"
                        android:layout_marginTop="15dp"
                        android:text="@string/make_video"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/contactList"
                android:layout_width="160dp"
                android:elevation="50dp"
                android:layout_height="150dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/desc"
                        android:src="@drawable/audio" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_light"
                        android:layout_marginTop="15dp"
                        android:text="@string/record_audio"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:clipToPadding="false"
            android:padding="10dp"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:id="@+id/tkPicture"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:elevation="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/desc"
                        android:src="@drawable/camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_light"
                        android:layout_marginTop="15dp"
                        android:text="@string/take_picture"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/typeMsg"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:elevation="50dp"
                android:layout_marginStart="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:contentDescription="@string/desc"
                        android:src="@drawable/msg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_light"
                        android:layout_marginTop="15dp"
                        android:text="@string/type_message"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
